unpackaged/main/default/objects/Support_Contract_Snapshot__c/Support_Contract_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Analytical Snapshot of Support Contracts to track monthly revenue.</description>
    <label>Support Contract Snapshot</label>
    <nameField>
        <displayFormat>SC-SNAP-{MM}-{YYYY}-({0})</displayFormat>
        <label>Support Contract Snapshot</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Contract Snapshots</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>