unpackaged/main/default/objects/Support_Contract_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Support Contract Snapshots</relationshipLabel>
    <relationshipName>Support_Contract_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>