unpackaged/main/default/objects/Support_Contract_Snapshot__c/fields/Maintenance_Plan_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Plan_Subscription__c</fullName>
    <label>Maintenance Plan/Subscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintenance Plan</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>