unpackaged/main/default/objects/Support_Contract_Snapshot__c/fields/Monthly_Margin__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Margin__c</fullName>
    <label>Monthly Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>