unpackaged/main/default/objects/Support_Contract_Snapshot__c/fields/Monthly_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Sale_Price__c</fullName>
    <label>Monthly Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>