unpackaged/main/default/objects/Support_Contract_Snapshot__c/fields/Support_Contract__c.field-meta.xml
<CustomField>
    <fullName>Support_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Contract</label>
    <referenceTo>Support_Contracts__c</referenceTo>
    <relationshipLabel>Support Contract Snapshots</relationshipLabel>
    <relationshipName>Support_Contract_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>