unpackaged/main/default/objects/Support_Contract_Snapshot__c/fields/Support_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Contract_Type__c</fullName>
    <label>Support Contract Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>