unpackaged/main/default/objects/Support_Contract_Snapshot__c/fields/Supported_By__c.field-meta.xml
<CustomField>
    <fullName>Supported_By__c</fullName>
    <label>Supported By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>